# libEVEAuth

./: Auth.cpp  Auth.h  CMakeLists.txt  Doxyfile  Encoding.cpp  README.md  Token.cpp  Token.h  library.cpp  library.h  shared.h
docs/html/: _auth_8h_source.html  annotated.html  class_e_v_e_auth_1_1_auth-members.html  class_e_v_e_auth_1_1_auth.html  class_e_v_e_auth_1_1_auth_exception-members.html  class_e_v_e_auth_1_1_auth_exception.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  menudata.js  struct_e_v_e_auth_1_1_memory_struct-members.html  struct_e_v_e_auth_1_1_memory_struct.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  class_e_v_e_auth_1_1_auth.tex  class_e_v_e_auth_1_1_auth_exception.eps  class_e_v_e_auth_1_1_auth_exception.tex  hierarchy.tex  index.tex  refman.tex  struct_e_v_e_auth_1_1_memory_struct.tex
encodings/: Base64.cpp  Base64.h  Encoding.h
hashings/: SHA256.cpp  SHA256.h
include/: Auth.h
src/: Auth.cpp  Token.cpp  Token.h
src/encodings/: Base64.cpp  Base64.h
src/utils/: CallBackTimer.cpp  CallBackTimer.h  jwt.h
utils/: CallBackTimer.cpp  CallBackTimer.h  jwt.h  picojson.h
